CONN-10463 Revert role validation + telemetry improvements + Java 11 fixes (#1133)