@@ -3,7 +3,6 @@ package com.snowflake.kafka.connector.internal;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
@@ -17,11 +16,10 @@ class OAuthURLTest {
     return Stream.of(
         Arguments.of(
             "https://localhost:8085/push/token",
-            ImmutableList.of("https", "localhost:8085", "/push/token", true)),
-        Arguments.of("localhost:8085", ImmutableList.of("https", "localhost:8085", "", true)),
-        Arguments.of(
-            "http://localhost:8085", ImmutableList.of("http", "localhost:8085", "", false)),
-        Arguments.of("localhost", ImmutableList.of("https", "localhost:443", "", true)));
+            List.of("https", "localhost:8085", "/push/token", true)),
+        Arguments.of("localhost:8085", List.of("https", "localhost:8085", "", true)),
+        Arguments.of("http://localhost:8085", List.of("http", "localhost:8085", "", false)),
+        Arguments.of("localhost", List.of("https", "localhost:443", "", true)));
   }
 
   @ParameterizedTest(name = "url: {0}, parsed: {1}")
